small cosmetic changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
       <%= yield %>
 
       <footer>
-        <p>&copy; Company 2014</p>
+        <p>&copy; Open Item Sets Project 2014</p>
       </footer>
 
     </div> <!-- /container -->
