--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,11 @@
 //= require_tree .
+//= require rails_bootstrap_forms
 //= require_self
+
+@import 'bootstrap';
+@import 'bootstrap/theme';
+
+div#page-content {
+  padding-left: 20px;
+  padding-right: 20px;
+}
