--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 
-<%= simple_form_for(@user) do |f| %>
-  <%= f.input :username %>
-  <%= f.input :email %>
-  <%= f.input :password %>
+<%= bootstrap_form_for(@user) do |f| %>
+  <%= f.text_field :username %>
+  <%= f.text_field :email %>
+  <%= f.password_field :password %>
 
-  <%= f.button :submit, "Sign up" %>
+  <%= f.submit "Sign up" %>
 <% end %>
