--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,9 +54,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#">Browse Item Sets</a></li>
+            <li><%= link_to("Browse Item Sets", item_sets_path) %></li>
             <li><a href="#">Vew My Item Sets</a></li>
-            <li><a href="#">Create Item Sets</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if signed_in? %>
@@ -85,7 +84,10 @@
     <div id="page-content" class="fluid-container">
       <h1><%= @page_title %></h1>
       <% flash.each do |key, value| %>
-        <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+        <div class="alert alert-<%= key %> alert-dissmissable">
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+          <%= value %>
+        </div>
       <% end %>
 
       <%= yield %>
