--- a/app/views/item_sets/index.html.erb
+++ b/app/views/item_sets/index.html.erb
@@ -1,1 +1,1 @@
-<%= link_to("Create Item Set", new_item_set_path) %>
+<%= link_to("Create Item Set", new_item_set_path, :class => "btn btn-default") %>
