more reasonable edit/create form for item sets

--- a/app/views/item_sets/edit.html.erb
+++ b/app/views/item_sets/edit.html.erb
@@ -1,8 +1,11 @@
 
-<%= bootstrap_form_for(@item_set) do |f| %>
+<%= bootstrap_form_for(@item_set, :layout => :horizontal) do |f| %>
   <%= f.text_field :title %>
-  <%= f.text_field :champion %>
-  <%= f.text_field :role %>
+  <%= f.radio_buttons_collection :role, ItemSet::ROLES, :to_s, :to_s %>
 
-  <%= f.submit "Submit" %>
+  <%= f.radio_buttons_collection :visible_to_public, 
+    ItemSet::Visibility.all, 
+    :id, :value %>
+
+  <%= f.submit "Update Meta Data" %>
 <% end %>
