--- a/app/views/item_sets/index.html.erb
+++ b/app/views/item_sets/index.html.erb
@@ -1,7 +1,24 @@
-<%= link_to("Create Item Set", new_item_set_path, :class => "btn btn-default") %>
 
-<ul>
+<!-- ITEM SET LISTING AREA -->
+<div class="row">
+  <div class="col-xs-12">
 <% @item_sets.each do |item_set| %>
-  <li><%= link_to("Item set #{item_set.id}", item_set_path(item_set)) %></li>
+  <div class="media">
+    <a class="pull-left" href="<%= item_set_path(item_set) %>">
+      <img width="64px" height="64px" class="media-object" src="<%= item_set.champion_image_url %>" alt="Portrait of <%= item_set.champion %>">
+    </a>
+    <div class="media-body">
+      <h4 class="media-heading"><%= link_to(item_set.display_name, item_set_path(item_set)) %></h4>
+      <p><%= item_set.champion %>, <%= item_set.role %> by <%= item_set.user.display_name %></p>
+    </div><!-- media-body -->
+  </div><!-- media -->
 <% end %>
-</ul>
+  </div><!-- col -->
+</div><!-- row -->
+
+<div class="row">
+  <div class="col-xs-12">
+    <h2>Actions</h2>
+    <%= link_to("Create Item Set", new_item_set_path, :class => "btn btn-default") %>
+  </div><!-- col -->
+</div><!-- row -->
