--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,9 @@
     </nav>
 
     <div id="page-content" class="fluid-container">
-      <h1><%= @page_title %></h1>
+      <% if !@page_title.blank? %>
+        <h1><%= @page_title %></h1>
+      <% end %>
       <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %> alert-dissmissable">
           <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
