--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><%= link_to("Browse Item Sets", item_sets_path) %></li>
-            <li><a href="#">Vew My Item Sets</a></li>
+            <li><%= link_to("View My Item Sets", profile_user_path(current_user)) %></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if signed_in? %>
