more view changes, text -> radio button

--- a/app/views/item_sets/edit.html.erb
+++ b/app/views/item_sets/edit.html.erb
@@ -1,11 +1,16 @@
 
-<%= bootstrap_form_for(@item_set, :layout => :horizontal) do |f| %>
-  <%= f.text_field :title %>
-  <%= f.radio_buttons_collection :role, ItemSet::ROLES, :to_s, :to_s %>
+<div class="row">
+  <div class="col-lg-12">
+    <h4>Meta Data</h4>
+    <%= bootstrap_form_for(@item_set, :layout => :horizontal) do |f| %>
+      <%= f.text_field :title %>
+      <%= f.radio_buttons_collection :role, ItemSet::ROLES, :to_s, :to_s %>
 
-  <%= f.radio_buttons_collection :visible_to_public, 
-    ItemSet::Visibility.all, 
-    :id, :value %>
+      <%= f.radio_buttons_collection :visible_to_public, 
+        ItemSet::Visibility.all, 
+        :id, :value %>
 
-  <%= f.submit "Update Meta Data" %>
-<% end %>
+      <%= f.submit "Update Meta Data" %>
+    <% end %>
+  </div><!-- col -->
+</div><!-- row -->
