--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><%= link_to("Browse Item Sets", item_sets_path) %></li>
-            <li><%= link_to("View My Item Sets", profile_user_path(current_user)) %></li>
+            <% if signed_in? %>
+              <li><%= link_to("View My Item Sets", profile_user_path(current_user)) %></li>
+            <% end %>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if signed_in? %>
