--- a/app/views/item_sets/new.html.erb
+++ b/app/views/item_sets/new.html.erb
@@ -1,5 +1,5 @@
 
-<%= bootstrap_form_for(@item_set) do |f| %>
+<%= bootstrap_form_for(@item_set, :layout => :horizontal) do |f| %>
   <%= f.text_field :title %>
   <%= f.text_field :champion %>
   <%= f.radio_buttons_collection :role, ItemSet::ROLES, :to_s, :to_s %>
