make changes to overall layout

--- a/app/views/item_sets/show.html.erb
+++ b/app/views/item_sets/show.html.erb
@@ -7,11 +7,11 @@
 
   <% if signed_in? and current_user.id == @item_set.user_id %>
     <div class="col-md-2">
-      <div class="well">
-        <h2>Actions</h2>
-        <%= link_to("Edit Item Set", edit_children_item_set_path(@item_set), :class => "btn btn-default") %>
-        <%= link_to("Edit Metadata", edit_item_set_path(@item_set), :class => "btn btn-default") %>
-      </div><!-- well -->
+      <h4>Actions</h4>
+      <ul class="nav nav-pills nav-stacked">
+        <li><%= link_to("Edit Item Set", edit_children_item_set_path(@item_set)) %></li>
+        <li><%= link_to("Edit Metadata", edit_item_set_path(@item_set)) %></li>
+      </ul>
     </div><!-- col -->
   <% end %>
 </div><!-- row -->
