--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
@@ -84,7 +84,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div id="page-content" class="fluid-container">
+    <div id="page-content" class="container">
       <% if !@page_title.blank? %>
         <h1><%= @page_title %></h1>
       <% end %>
