--- a/app/views/item_sets/index.html.erb
+++ b/app/views/item_sets/index.html.erb
@@ -8,11 +8,9 @@
   <%= paginate @item_sets %>
   </div><!-- col -->
   <div class="col-md-2">
-    <div class="well">
-      <h2>Actions</h2>
-      <p>
-        <%= link_to("Create Item Set", new_item_set_path, :class => "btn btn-default") %>
-      </p>
-    </div><!-- well -->
+    <h4>Actions</h4>
+    <ul class="nav nav-pills nav-stacked">
+      <li><%= link_to("Create Item Set", new_item_set_path) %></li>
+    </ul>
   </div><!-- col -->
 </div><!-- row -->
