--- a/app/assets/stylesheets/item_sets.scss
+++ b/app/assets/stylesheets/item_sets.scss
@@ -1,7 +1,9 @@
 div.item-shop-category {
-  background: #e5e1e8;
   margin-top: 5px;
   padding: 5px;
-  border: solid 1px;
   color: #000;
+}
+
+div.item {
+  float: left;
 }
