--- a/app/views/item_sets/edit_children.html.erb
+++ b/app/views/item_sets/edit_children.html.erb
@@ -1,5 +1,5 @@
 <div ng-app="itemSet" ng-controller="itemSetsController" class="row">
-  <h1>Edit Item Set</h1>
+  <h1>Edit Item Set for <%= @item_set.champion %></h1>
   <div class="col-md-6">
     <input class="form-control" placeholder="Filter">
     <div class="row">
@@ -143,7 +143,7 @@
           <p>Drag these items onto the item set panel, or click on them to add to the item set.</p>
           <div class="item" ng-repeat="item in selectedItems">
             <img src="http://static.openitemsets.com/img/item/{{item.id}}.png"></img>
-            {{item.gold.total}}
+            <span>{{item.gold.total}}</span>
           </div><!-- item -->
         </div><!-- item-shop -->
       </div><!-- col-sm-8 -->
