--- a/app/views/item_sets/edit_children.html.erb
+++ b/app/views/item_sets/edit_children.html.erb
@@ -187,7 +187,7 @@
     <!-- ITEM SET BUILDING AREA -->
     <h4>Item Set</h4>
     <!-- END OF ITEM SET BUILDING AREA -->
-    <div class="item-set-block well">
+    <div item-droppable class="item-set-block well">
       <input class="form-control" value="Starting Items">
     </div>
     <div class="item-set-block well inactive-block">
