--- a/app/views/item_sets/edit_children.html.erb
+++ b/app/views/item_sets/edit_children.html.erb
@@ -196,7 +196,7 @@
           <button class="close">&times;</button>
         </div>
       </div>
-      <div set-item-draggable class="item" ng-repeat="itemId in blockElement.items track by $index" data-index="{{$index}}">
+      <div set-item-draggable class="item" ng-repeat="itemId in blockElement.items track by $index" data-block-index="{{$parent.$index}}" data-index="{{$index}}">
         <img ng-src="http://static.openitemsets.com/img/item/{{itemId}}.png"></img>
         <span>{{itemData[itemId].gold.total}}</span>
       </div><!-- item -->
