clean up, make angularjs work with turbolinks

--- a/app/views/item_sets/edit_children.html.erb
+++ b/app/views/item_sets/edit_children.html.erb
@@ -1,4 +1,4 @@
-<div ng-app="itemSet" ng-controller="itemSetsController" class="row">
+<div ng-controller="itemSetsController" class="row">
   <h1>Edit Item Set for <%= @item_set.champion %></h1>
 
   <!-- SHOP AREA -->
