--- a/app/views/item_sets/edit_children.html.erb
+++ b/app/views/item_sets/edit_children.html.erb
@@ -143,7 +143,8 @@
         <h4>Item List</h4>
         <div id="item-shop">
           <p>Drag these items onto the item set panel, or click on them to add to the item set.</p>
-          <div item-draggable class="item" ng-repeat="item in selectedItems | filter:query" data-from-shop="1" data-item-id="{{item.id}}">
+          <div data-toggle="tooltip" data-placement="auto" item-draggable class="item" 
+            ng-repeat="item in selectedItems | filter:query" data-from-shop="1" data-item-id="{{item.id}}">
             <img ng-src="http://static.openitemsets.com/img/item/{{item.id}}.png"></img>
             <span>{{item.gold.total}}</span>
           </div><!-- item -->
@@ -196,7 +197,7 @@
           <button class="close">&times;</button>
         </div>
       </div>
-      <div set-item-draggable class="item" ng-repeat="itemId in blockElement.items track by $index" data-block-index="{{$parent.$index}}" data-index="{{$index}}">
+      <div data-toggle="tooltip" data-placement="auto" set-item-draggable class="item" ng-repeat="itemId in blockElement.items track by $index" data-item-id="{{itemId}}" data-block-index="{{$parent.$index}}" data-index="{{$index}}">
         <img ng-src="http://static.openitemsets.com/img/item/{{itemId}}.png"></img>
         <span>{{itemData[itemId].gold.total}}</span>
       </div><!-- item -->
