backend for generating game readable JSON

--- a/app/views/partials/_item_set_media.html.erb
+++ b/app/views/partials/_item_set_media.html.erb
@@ -1,7 +1,7 @@
 
   <div class="media">
     <a class="pull-left" href="<%= item_set_path(item_set) %>">
-      <img width="64px" height="64px" class="media-object" src="<%= item_set.champion_image_url %>" alt="Portrait of <%= item_set.champion %>">
+      <img width="64" height="64" class="media-object" src="<%= item_set.champion_image_url %>" alt="Portrait of <%= item_set.champion %>">
     </a>
     <div class="media-body">
       <h4 class="media-heading"><%= link_to(item_set.display_name, item_set_path(item_set)) %>
