--- a/app/views/item_sets/edit.html.erb
+++ b/app/views/item_sets/edit.html.erb
@@ -10,6 +10,7 @@
         :id, :value %>
 
       <%= f.submit "Update Meta Data" %>
+      <%= link_to 'Go Back', item_set_path(@item_set), :class => 'btn btn-danger' %>
     <% end %>
   </div><!-- col -->
 </div><!-- row -->
