--- a/app/views/item_sets/show.html.erb
+++ b/app/views/item_sets/show.html.erb
@@ -1,7 +1,8 @@
 
-<div class="row">
+<div ng-controller="itemSetViewController" class="row">
   <div class="col-lg-10">
-    <p>Information about the item set</p>
+    <button class="btn btn-info">Show JSON</button>
+
 
   </div><!-- col -->
 
