--- a/app/views/item_sets/show.html.erb
+++ b/app/views/item_sets/show.html.erb
@@ -1,7 +1,7 @@
 
 <div ng-controller="itemSetViewController" class="row">
   <div class="col-lg-10">
-    <button class="btn btn-info">Show JSON</button>
+    <button ng-click="syntaxHighlight()" tyep="button" class="btn btn-info" data-toggle="modal" data-target="#jsonModal">Show JSON</button>
 
 
   </div><!-- col -->
@@ -16,3 +16,21 @@
     </div><!-- col -->
   <% end %>
 </div><!-- row -->
+
+<!-- Modal -->
+<div class="modal fade" id="jsonModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">JSON of <%= @item_set.display_name %></h4>
+      </div>
+      <div class="modal-body">
+        <pre class="brush: js"><%= @item_set.to_game_json(true) %></pre>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
