--- a/app/views/item_sets/show.html.erb
+++ b/app/views/item_sets/show.html.erb
@@ -1,10 +1,20 @@
 
 <div ng-controller="itemSetViewController" class="row">
   <div class="col-lg-10">
-    <button ng-click="syntaxHighlight()" tyep="button" class="btn btn-info" data-toggle="modal" data-target="#jsonModal">Show JSON</button>
 
+    <% if @item_set_data.blank? or @item_set_data['blocks'].blank? %>
+      <p>This item set is currently blank.</p>
+    <% else %>
+      <%= render :partial => 'item_set_view', :locals => {:item_set_data => @item_set_data} %>
+    <% end %>
 
+    <hr />
+
+    <button ng-click="syntaxHighlight()"  type="button" class="btn" data-toggle="modal" data-target="#jsonModal">
+     <span class="glyphicon glyphicon-list"></span> Source
+    </button>
   </div><!-- col -->
+
 
   <% if signed_in? and current_user.id == @item_set.user_id %>
     <div class="col-md-2">
