some ui improvements

--- a/app/views/item_sets/show.html.erb
+++ b/app/views/item_sets/show.html.erb
@@ -10,6 +10,10 @@
 
     <hr />
 
+    <a class="btn btn-primary" href="#">
+     <span class="glyphicon glyphicon-book"></span> How to Use
+    </a>
+
     <button ng-click="syntaxHighlight()"  type="button" class="btn" data-toggle="modal" data-target="#jsonModal">
      <span class="glyphicon glyphicon-list"></span> Source
     </button>
