--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,13 @@
       <%= yield %>
 
       <footer>
-        <p>&copy; Open Item Sets Project 2014</p>
+        <p>Copyright 2014 &copy; Open Item Sets Project, Released under GNU Affero General Public License version 3</p>
+        <ul>
+          <li><%= link_to('Source Code', 'http://www.github.com/ichiro101/openitemsets_web') %></li>
+          <li><%= link_to('Terms of Service', '#') %></li>
+          <li><%= link_to('Privacy', '#') %></li>
+          <li><%= link_to('About & Contact Us', '#') %></li>
+        </ul>
       </footer>
 
     </div> <!-- /container -->
