change wording and font

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
       <%= yield %>
 
       <footer>
-        <p>Copyright 2014 &copy; Open Item Sets Project, Released under GNU Affero General Public License version 3</p>
+        <p>Copyright 2014 &copy; Open Item Sets Project. By using this site and its services, you agree to the Terms of Service and Privacy Policy.</p>
         <ul>
           <li><%= link_to('Source Code', 'http://www.github.com/ichiro101/openitemsets_web') %></li>
           <li><%= link_to('Terms of Service', '#') %></li>
