--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,9 +101,9 @@
         <p>Copyright 2014 &copy; Open Item Sets Project. By using this site and its services, you agree to the Terms of Service and Privacy Policy.</p>
         <ul>
           <li><%= link_to('Source Code', 'http://www.github.com/ichiro101/openitemsets_web') %></li>
-          <li><%= link_to('Terms of Service', '#') %></li>
-          <li><%= link_to('Privacy', '#') %></li>
-          <li><%= link_to('About & Contact Us', '#') %></li>
+          <li><%= link_to('Terms of Service', '/tos') %></li>
+          <li><%= link_to('Privacy', '/privacy') %></li>
+          <li><%= link_to('About & Contact Us', '/about_us') %></li>
         </ul>
       </footer>
 
