place holder get started page

--- a/app/views/home/install.html.erb
+++ b/app/views/home/install.html.erb
@@ -1,3 +1,19 @@
 <h1>Getting Started</h1>
 
-TODO: replace this with actual instructions on how to get started...
+<p>
+Steps to get started using Open Item Sets:
+<ol>
+  <li>Register an account!</li>
+  <li>Build your own item sets, or browse around and subscribe to ones you like.</li>
+  <li>Download our Open Item Sets desktop application (see below) to sync your online item sets to the
+  League of Legends client.</li>
+</ol>
+</p>
+
+<h3>Download the Desktop Client</h3>
+<p>The current version of the desktop client is <strong><%= @version %></strong>. </p>
+
+<p><%= link_to("Download", "#", :class => "btn btn-primary", :type => "button") %> </p>
+<p><%= link_to("Desktop Client Source Code", "https://github.com/ichiro101/OpenItemSets_NativeClient") %></p>
+
+
