role filter, more frontend changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,4 +41,11 @@ form.form-inline {
   label {
     padding-right: 10px;
   }
+  select {
+    margin-right: 10px;
+  }
+}
+
+div.media p {
+  margin-bottom: 0px;
 }
