--- a/app/views/partials/_item_set_media.html.erb
+++ b/app/views/partials/_item_set_media.html.erb
@@ -6,10 +6,11 @@
     <div class="media-body">
       <h4 class="media-heading"><%= link_to(item_set.display_name, item_set_path(item_set)) %>
     </h4>
-    <%= item_set.champion %>, <%= item_set.role %> by <%= link_to(item_set.user.display_name, profile_user_path(item_set.user)) %> 
+    <p><%= item_set.champion %>, <%= item_set.role %> by <%= link_to(item_set.user.display_name, profile_user_path(item_set.user)) %> 
     (<%= pluralize(item_set.subscriptions.count, "subscribers") %>)
       <% if !item_set.visible_to_public %>
         <em>-- This item set is hidden from public view</em>
-      <% end %>
+      <% end %></p>
+      <p>Created <%= time_ago_in_words(item_set.created_at) %> ago. <em>Lasted updated <%= time_ago_in_words(item_set.updated_at) %> ago.</em></p>
     </div><!-- media-body -->
   </div><!-- media -->
